# apothecary

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_MODEL.md  EVIDENCE_FRAMEWORK.md  ROADMAP.md  SAFETY.md  TIMING_ENGINE.md
examples/: my_stack.yaml
src/apothecary/: cli.py
src/apothecary/api/: routes.py
src/apothecary/data/: loader.py  nutrients.py
src/apothecary/data/curated/dietary/: alcohol.yaml  black_pepper_piperine.yaml  caffeine.yaml  charcoal_grilled_meat.yaml  cruciferous_vegetables.yaml  grapefruit.yaml  green_tea.yaml  pomelo.yaml  seville_orange.yaml  tobacco_smoking.yaml
src/apothecary/data/curated/drugs/: acetaminophen.yaml  acyclovir.yaml  adderall.yaml  albuterol.yaml  alendronate.yaml  allopurinol.yaml  alprazolam.yaml  amiodarone.yaml  amitriptyline.yaml  amlodipine.yaml  amoxicillin.yaml  apixaban.yaml  aripiprazole.yaml  armodafinil.yaml  atenolol.yaml  atomoxetine.yaml  atorvastatin.yaml  azithromycin.yaml  baclofen.yaml  brexpiprazole.yaml  budesonide.yaml  buprenorphine.yaml  bupropion.yaml  buspirone.yaml  carbamazepine.yaml  (+161 more)
src/apothecary/data/importers/: drugbank_import.py
src/apothecary/engine/: interaction_engine.py  timing_engine.py
src/apothecary/models/: __init__.py  evidence.py  interaction.py  stack.py  substance.py
src/tests/: test_interactions.py  test_timing.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: DepletionPanel.tsx  InteractionPanel.tsx  StackList.tsx  SubstanceSearch.tsx  TimelinePanel.tsx
web/src/lib/: api.ts
(+57 files in other folders)
